src/style.css
body {
  background: url(static/imgs/bg_pattern.gif) #51c9ab repeat center bottom;
  background-attachment: fixed;
  transition: background-color .2s ease-out;
  padding: 0;
  margin: 0;

  text-shadow: .08em .08em 0 rgba(0,0,0,.2);

  font-family: 'Kreon', sans-serif;
  font-weight: normal;
  font-size: 16px;
  line-height: 1.6;

  color: white;

  overflow: hidden;
  pointer-events: none;
}

body[data-detached="true"] {
  background-color: #62ebc8;
}

#scroll-outer-wrapper {
  box-sizing: border-box;
  position: absolute;
  height: 100vh;
  height: calc(var(--vh, 1vh) * 100);
  width: 100%;
  overflow-x: hidden;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  scroll-behavior: smooth;
  pointer-events: auto;
}

#scroll-inner-wrapper {
  pointer-events: none;
}

body[data-project-active="true"] #scroll-outer-wrapper {
  overflow-y: hidden;
}

h1, h2, h3, h4 {
  margin: 0;
  line-height: 1;
  font-weight: normal;
  font-weight: bold;
}

h1 {
  font-weight: bold;
  font-size: 9vmin;
  font-size: calc(var(--vmin, 1vmin) * 9);
}

h2 {
  font-weight: normal;
  font-size: 5.5vmin;
  font-size: calc(var(--vmin, 1vmin) * 5.5);
}

h3 {
  font-weight: normal;
  font-size: 1.25em;
}

p {
  margin: 0 0 1em 0;
}

p:last-child {
  margin-bottom: 0;
}

/**
 * Head
 */
#face,
#scalp,
#scalp-bottom,
.pupil__inner,
.eyeball,
.eyelid,
.eyebrow {
  background-image: url(static/imgs/head_merged.gif);
}

#head {
  position: fixed;
  bottom: 0;
  width: 90vmin;
  width: calc(var(--vmin, 1vmin) * 90);
  left: 50%;
  transform: translateX(-50%);
  line-height: 0;
  z-index: 1;
}

#face svg,
#scalp svg {
  display: none;
}

#face {
  background-repeat: no-repeat;
  background-position: center -40vmin;
  background-position: center calc(var(--vmin, 1vmin) * -40);
}

#scalp {
  background-repeat: no-repeat;
  background-position: center top;
}

#face,
#scalp {
  background-size: cover;
}

#face {
  transform-origin: center bottom;
  margin-top: -1vmin;
  margin-top: calc(var(--vmin, 1vmin) * -1);

  height: 0;
  padding-bottom: 27.5%;
}

#face svg {
  width: 125%;
  margin-left: -12.5%;
}

#eyes {
  position: absolute;
  width: 100%;
  left: 0;
  bottom: -.5rem;
  transform-origin: center bottom;
}

.eye {
  width: 21.12676%;
  position: absolute;
  bottom: 0;
}

#eye-left {
  left: 25%;
}

#eye-right {
  right: 25%;
}

.eyeball {
  width: 100%;
  height: 0;
  padding-bottom: 90%;
  background-repeat: no-repeat;
  background-position: left bottom;
  background-size: 90vmin auto;
  background-size: calc(var(--vmin, 1vmin) * 90) auto;
}

.pupil {
  position: absolute;
  left: 30%;
  top: 32%;
  width: 40%;
  height: 44.5%;

  animation-name: pupil-movement;
  animation-timing-function: ease-out;
  animation-iteration-count: infinite;
  animation-duration: 6s;
}

.pupil__inner {
  transition: transform .1s ease;
  transform-origin: center center;
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-repeat: no-repeat;
  background-position: -20vmin -84.4vmin;
  background-position: calc(var(--vmin, 1vmin) * -20) calc(var(--vmin, 1vmin) * -84.4);
  background-size: 90vmin auto;
  background-size: calc(var(--vmin, 1vmin) * 90) auto;
}

.eyelid {
  transition: transform .1s ease-out;
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  background-repeat: no-repeat;
  background-position: -50vmin -45vmin;
  background-position: calc(var(--vmin, 1vmin) * -50) calc(var(--vmin, 1vmin) * -45);
  background-size: 150vmin auto;
  background-size: calc(var(--vmin, 1vmin) * 150) auto;
  height: 100%;
  transform: scaleY(.45);
  transform-origin: center top;
}

.closed-eyelids {
  transition: transform .1s ease-out;
  position: absolute;
  left: -4%;
  right: -4%;
  top: -4%;
  bottom: -6%;
  background-color: transparent;
  background-repeat: no-repeat;
  background-position: center top;
  background-size: contain;
  opacity: 0;

  animation-name: closed-eyelids;
  animation-timing-function: step-end;
  animation-iteration-count: infinite;
  animation-duration: 6s;
}

.eyebrow {
  transition: transform .1s ease-out;
  position: absolute;
  left: -14%;
  top: 45%;
  width: 128%;
  height: 0;
  padding-bottom: 23%;
  background-size: 90vmin auto;
  background-size: calc(var(--vmin, 1vmin) * 90) auto;
  background-repeat: no-repeat;
  background-color: transparent;
  transform: translate3d(0px, -50%, 0px);
}

#eye-left .closed-eyelids {
  background-image: url(static/imgs/closed_eyelids_left.gif);
}

#eye-right .closed-eyelids {
  background-image: url(static/imgs/closed_eyelids_right.gif);
}

#eye-left .eyebrow {
  background-position: -19.3vmin -74.5vmin;
  background-position: calc(var(--vmin, 1vmin) * -19.3) calc(var(--vmin, 1vmin) * -74.5);
}

#eye-right .eyebrow {
  background-position: -19.3vmin -79.6vmin;
  background-position: calc(var(--vmin, 1vmin) * -19.3) calc(var(--vmin, 1vmin) * -79.6);
}

#scalp {
  position: relative;
  transform-origin: center bottom;
  
  height: 0;
  padding-bottom: 43%;
}

#scalp-bottom {
  background-repeat: no-repeat;
  background-position: center -65.5vmin;
  background-position: center calc(var(--vmin, 1vmin) * -65.5);
  background-size: cover;
  height: 8.38vmin;
  height: calc(var(--vmin, 1vmin) * 8.38);
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  transform: translateY(50%) scaleY(0);
  box-sizing: border-box;
}

#eyelids-top {
  transform-origin: top center;
}

#content {
  transition: z-index 0s step-start .3s;
  position: fixed;
  width: 100%;
  left: 0;
  right: 0;
  top: 0;
  text-align: center;
  z-index: 0;
}

body[data-project-active="true"] #content {
  transition-timing-function: step-end;
  transition-delay: .3s;
  z-index: 2;
}

[data-emotional-state="startled"] .pupil__inner {
  transform: scale(.75);
}
[data-emotional-state="startled"] .eyebrow {
  transform: translate3d(0px, -100%, 0px);
}
[data-emotional-state="startled"] .eyelid {
  transform: scaleY(.35);
}
/* ... */

